correction padding sur la version mobile sur les carte populaire

--- a/css/mediaQueries.css
+++ b/css/mediaQueries.css
@@ -195,7 +195,7 @@
     }
     .group-section{
         border-radius: 0px;
-        padding: 10px 0px 40px;
+        padding: 10px 10px 40px;
     }
     #accommodation{
         max-width: 100%;
